<resources>
    <string name="app_name">recommendations</string>
    <string name="recommendation1">I am strong.</string>
    <string name="recommendation2">I believe in myself.</string>
    <string name="recommendation3">Each day is a new opportunity to grow and be a better version of myself.</string>
    <string name="recommendation4">Every challenge in my life is an opportunity to learn from.</string>
    <string name="recommendation5">I have so much to be grateful for.</string>
    <string name="recommendation6">Good things are always coming into my life.</string>
    <string name="recommendation7">New opportunities await me at every turn.</string>
    <string name="recommendation8">I have the courage to follow my heart.</string>
    <string name="recommendation9">Things will unfold at precisely the right time.</string>
    <string name="recommendation10">I will be present in all the moments that this day brings.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TitleLabel"> Title</string>
    <string name="DescriptionLabel"> Description</string>
    <string name="AgeLabel"> Age</string>
    <string name="BenefitsLabel"> Benefits</string>
    <string name="TypeLabel"> Type</string>
    <string name="AddButton">Add</string>
    <string name="CancelButton">Cancel</string>
    <string name="UpdateButton">Update</string>
    <string name="DeleteButton">Delete</string>

    <string name="NotConnectedToServer">The device is not connected to the server</string>






    <string-array name="arrayTypes">
        <item>Sport</item>
        <item>Food recipe</item>
        <item>Book</item>
        <item>Other</item>
    </string-array>

</resources>